@@ -1,5 +1,10 @@
 2016-08-15 Even Rouault <even.rouault at spatialys.com>
 
+	* tools/rgb2ycbcr.c: validate values of -v and -h parameters to
+	avoid potential divide by zero. Fixes CVE-2016-3623 (bugzilla #2569)
+
+2016-08-15 Even Rouault <even.rouault at spatialys.com>
+
 	* tools/tiffcrop.c: Fix out-of-bounds write in loadImage().
 	From patch libtiff-CVE-2016-3991.patch from
 	libtiff-4.0.3-25.el7_2.src.rpm by Nikola Forro (bugzilla #2543)
